# zero-details-evaluation

./: .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindFolly.cmake  FindGlog.cmake  FindLibCDS.cmake
src/: evaluation_framework.hpp
src/free_list_queue_alternatives/: boost_lockfree_queue.hpp  boost_lockfree_queue_fixed_size.hpp  cds_container_basketqueue.hpp  cds_container_fcqueue.hpp  cds_container_moirqueue.hpp  cds_container_msqueue.hpp  cds_container_optimisticqueue.hpp  cds_container_rwqueue.hpp  cds_container_segmented_queue.hpp  cds_container_vyukovmpmccyclequeue.hpp  config.hpp  folly_mpmcqueue.hpp  free_list.hpp  free_list_queue_alternatives.cpp  free_list_queue_alternatives.hpp  helper_functions.hpp  legacy_zero_stack.hpp  lockfree_queue_mpmc_fixed_bounded_value.hpp  main.cpp  moodycamel_concurrent_queue.hpp  mpmc_bounded_queue.hpp  mpmc_bounded_queue_t.hpp  rigtorp_mpmcqueue.hpp  tbb_concurrent_bounded_queue.hpp  tbb_concurrent_queue.hpp
